--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,13 +1,14 @@
 <section class="section summary-section">
-<h2 class="section-title"><i class="fa fa-user"></i>ABOUT ME</h2>
+<h2 class="section-title"><i class="fa fa-user"></i>PROFILE</h2>
 <div class="summary">
+  <p>Software Engineer at Impressivo, Inc.</p>
     <!--<p><b>"마음대로 되는 일이 하나도 없다. 그래서 순간순간이 재미있다." - 공지영</b></p>-->
-    <p><b>"Nothing goes as I expected, so every moment is enjoyable."</b></p>
+    <!-- <p><b>"Nothing goes as I expected, so every moment is enjoyable."</b></p>
     <p>This is the motto of my life.
     I think everything in this world is relative, so positive thoughts are very important.
     I start by reading this phrase everyday morning, and I try to live more positive.</p>
     <p>I love traveling and have a global insight based on my experience traveling through many countries.</p>
     <p>Also I love everything related to computers and data science.
-    I have a dream to be a <b>data scientist</b>, and the goal of my life is to make small changes in human lives with use of the knowledge I know.</p>
+    I have a dream to be a <b>data scientist</b>, and the goal of my life is to make small changes in human lives with use of the knowledge I know.</p> -->
 </div><!--//summary-->
 </section><!--//section-->
