--- a/_includes/education.html
+++ b/_includes/education.html
@@ -16,19 +16,19 @@
                     </div><!--//details-->
                 </div><!--//item-->
 
-                <div class="item">
+                <!-- <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Burton and South Derbyshire College</h3>
                             <div class="time">2016</div>
-                        </div><!--//upper-row-->
+                        </div>
                         <div class="company">Birmingham, England</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
                         <p>Participated in short-term overseas training program which was held in International Affairs Center. </p>
 
-                    </div><!--//details-->
-                </div><!--//item-->
+                    </div>
+                </div> -->
 
                 <div class="item">
                     <div class="meta">
