--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,11 +4,11 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
-        <h3 class="job-title">Impressivo Intern</h3>
-        <div class="time">Present</div>
+        <h3 class="job-title">Software Engineer</h3>
+        <div class="time">2017.6 - Present</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Seoul, Korea</div>
+      <div class="company">Impressivo, Inc. - Seoul, Korea</div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -21,16 +21,16 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
-        <h3 class="job-title">PeopleSpace Internship</h3>
-        <div class="time">2017</div>
+        <h3 class="job-title">Junior Software Engineer</h3>
+        <div class="time">2017.1 - 2017.2</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Irvine, CA</div>
+      <div class="company">PeopleSpace - Irvine, CA</div>
     </div>
     <!--//meta-->
     <div class="details">
       <p>Created OpenVPN with using Amazon Web Service(AWS) for client information security in SymphonyRM which is Customer Relationship Management(CRM) company in PeopleSpace.</p>
-      <p>Attended in the International Consumer Electronics Show(CES) 2017 which held in Las Vegas, NV.</p>
+      <!-- <p>Attended in the International Consumer Electronics Show(CES) 2017 which held in Las Vegas, NV.</p> -->
     </div>
     <!--//details-->
   </div>
