--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,9 +1,10 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title"><i class="fa fa-heart"></i> Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>Data Science </li>
-<li>Photographing </li>
+<li>Machine Learning </li>
+<li>Reinforcement Learning </li>
+<!-- <li>Photographing </li>
 <li>Snowboarding </li>
-<li>Traveling </li>
+<li>Traveling </li> -->
 </ul>
 </div><!--//interests-->
