--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -23,28 +23,28 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Research Assistant</h3>
-                            <div class="time">2017 - </div>
+                            <div class="time">2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Gachon University</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Attend network seminar every week.</p>
+                        <p>Made presentation about 'Deep reinforcement learning'.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
-                <div class="item">
+                <!-- <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Attended Consumer Electronics Show(CES)</h3>
                             <div class="time">2017</div>
-                        </div><!--//upper-row-->
+                        </div>
                         <div class="company">Las Vegas, NV</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
                         <p>Attended 2017 CES, which was held in Las Vegas.</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+                        <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                    </div>
+                </div> -->
 
                 <div class="item">
                     <div class="meta">
