--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -1,5 +1,5 @@
 <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-archive"></i>Activities</h2>
+                <h2 class="section-title"><i class="fa fa-rocket"></i>Activities</h2>
 
                 <div class="item">
                     <div class="meta">
