--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,6 +5,7 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Software Engineer</h3>
+        <div class="links"><a href="http://www.impressivo.net" class="view-on-github"><i class="fa fa-link"></i></a></div>
         <div class="time">2017.6 - Present</div>
       </div>
       <!--//upper-row-->
@@ -22,6 +23,7 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Junior Software Engineer</h3>
+        <div class="links"><a href="http://peoplespace.us" class="view-on-github"><i class="fa fa-link"></i></a></div>
         <div class="time">2017.1 - 2017.2</div>
       </div>
       <!--//upper-row-->
