--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,6 +5,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">PEOPLE INSIDE</h3>
+                            <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
                             <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Real-time indoor people count</div>
@@ -12,16 +13,17 @@
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
                         <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
-                        <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
                     </div><!--//details-->
                 </div><!--//item-->
 
-                <div class="item">
-                    <div class="meta">
+                  <div class="item">
+                      <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">WHEN</h3>
+                          <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Group Schedule Manager (Android Application)</div>
@@ -39,6 +41,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Solar System Explorer</h3>
+                            <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Solar System Simulation</div>
@@ -56,6 +59,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Segway Robot</h3>
+                            <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Self-balancing robot</div>
