--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -4,7 +4,10 @@
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
   <div class="item">
-    <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
+    <div class="upper-row">
+      <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
+      <div class="links"><a href="https://ysm0622.github.io/photo/" class="view-on-github"><i class="fa fa-camera"></i></a></div>
+    </div>
     <div class="upper-row">
       <p>- <img src="{{site.baseurl}}/assets/images/us.png" /> US (Intern & Travel)
         <div class="time">Jan - Feb 2017</div>
