--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,22 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Art Hackathon</h3>
+                            <div class="time">2017</div>
+                        </div><!--//upper-row-->
+                        <div class="company">GyeongGi, Korea</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                      <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
+                      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                         <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                         <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">23rd Google Startup Weekend Seoul Hackathon</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
