--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,78 +1,95 @@
 <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
+  <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">PEOPLE INSIDE</h3>
-                            <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
-                            <div class="time">2016 - 2017</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Real-time indoor people count</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
-                        <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
-                      <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">PEOPLE INSIDE</h3>
+        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="time">2016 - 2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Real-time indoor people count</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
+      <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
+        <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                  <div class="item">
-                      <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">WHEN</h3>
-                          <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Group Schedule Manager (Android Application)</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Developed group schedule management android application that find available intersection time of all group members.</p>
-                        <p>Registered at google app store.</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">WHEN</h3>
+        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Group Schedule Manager (Android Application)</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed group schedule management android application that find available intersection time of all group members.</p>
+      <p>Registered at google app store.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Solar System Explorer</h3>
-                            <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Solar System Simulation</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Developed 'Solar System Explorer' program with C++ and OpenGL library.</p>
-                        <p>Made a presentation at the Software festival at Gachon university.</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Solar System Explorer</h3>
+        <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Solar System Simulation</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed 'Solar System Explorer' program with C++ and OpenGL library.</p>
+      <p>Made a presentation at the Software festival at Gachon university.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Segway Robot</h3>
-                            <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Self-balancing robot</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Developed 'Segway Robot' that is auto-balancing robot with gyroscope and accelometer sensors.</p>
-                        <p>Using Arduino with PID control algorithm and Adafruit library.</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Segway Robot</h3>
+        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Self-balancing robot</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed 'Segway Robot' that is auto-balancing robot with gyroscope and accelometer sensors.</p>
+      <p>Using Arduino with PID control algorithm and Adafruit library.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+             <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <!-- 로봇공학 / 구글 스타트업위켄드 프로젝트 2개 -->
+  <!-- 로봇공학 / 구글 스타트업위켄드 프로젝트 2개 -->
 
-            </section><!--//section-->
+</section>
+<!--//section-->
