--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -5,6 +5,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Art Hackathon</h3>
+                            <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                         <div class="company">GyeongGi, Korea</div>
