--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -9,7 +9,7 @@
       <div class="links"><a href="https://ysm0622.github.io/photo/" class="view-on-github"><i class="fa fa-camera"></i></a></div>
     </div>
     <div class="upper-row">
-      <p>- <img src="{{site.baseurl}}/assets/images/us.png" /> US (Intern & Travel)
+      <p>- <img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
         <div class="time">Jan - Feb 2017</div>
       </p>
     </div>
@@ -25,10 +25,10 @@
         <div class="time">Jan - Feb 2016</div>
         &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png" /> England /
         <img src="{{site.baseurl}}/assets/images/fr.png" /> France /
-        <img src="{{site.baseurl}}/assets/images/ch.png" /> Switzerland /
-        <img src="{{site.baseurl}}/assets/images/it.png" /> Italy<br> &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png" /> Austria /
-        <img src="{{site.baseurl}}/assets/images/de.png" /> German /
-        <img src="{{site.baseurl}}/assets/images/nl.png" /> Netherland</p>
+        <img src="{{site.baseurl}}/assets/images/ch.png" /> Swiss /
+        <img src="{{site.baseurl}}/assets/images/it.png" /> Italia <br> &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png" /> Austria /
+        <img src="{{site.baseurl}}/assets/images/de.png" /> Germany /
+        <img src="{{site.baseurl}}/assets/images/nl.png" /> Netherlands</p>
     </div>
     <div class="upper-row">
       <p>- <span class="project-tagline">
