--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/bootstrap/css/animate.min.css" type="text/css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="{{site.baseurl}}/assets/css/{% if site.style %}{{ site.style}}.css{% else %}styles.css{% endif %}">
+    <link rel="styesheet" href="{{site.baseurl}}/assets/css/popup.css">
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css" type="text/css"> -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
