--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,6 +7,7 @@
     <!-- custom js -->
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/creative.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.popup.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,4 +17,5 @@
       ga('create', 'UA-99001722-1', 'auto');
       ga('send', 'pageview');
 
+      $('a.popup').popup();
     </script>
