--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -1,55 +1,87 @@
 <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-rocket"></i>Activities</h2>
+  <h2 class="section-title"><i class="fa fa-rocket"></i>Activities</h2>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Art Hackathon</h3>
-                            <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
-                            <div class="time">2017</div>
-                        </div><!--//upper-row-->
-                        <div class="company">GyeongGi, Korea</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                      <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
-                      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Art Hackathon</h3>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act1"><i class="fa fa-camera"></i></a></div>
+        <div id="act1" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/arthackathon2.JPG" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">GyeongGi, Korea</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">23rd Google Startup Weekend Seoul Hackathon</h3>
-                            <div class="time">2017</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Seoul, Korea</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                      <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
-                      <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
-                      <p>Received 'BEST UX/UI' award in final judgement.</p>
-                      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Google Startup Weekend</h3>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act2"><i class="fa fa-camera"></i></a></div>
+        <div id="act2" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/gsw2017-1.JPG" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Seoul, Korea</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
+      <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
+      <p>Received 'BEST UX/UI' award in final judgement.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Research Assistant</h3>
-                            <div class="time">2017</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Gachon University</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Made presentation about 'Deep reinforcement learning'.</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Research Assistant</h3>
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Gachon University</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Made presentation about 'Deep reinforcement learning'.</p>
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <!-- <div class="item">
+  <!-- <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Attended Consumer Electronics Show(CES)</h3>
@@ -63,53 +95,86 @@
                     </div>
                 </div> -->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">KIISE Winter Conference</h3>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Gangwon, Korea</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
-                        <p></p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">KIISE Winter Conference</h3>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act3"><i class="fa fa-camera"></i></a></div>
+        <div id="act3" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/kiise.jpg" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Gangwon, Korea</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
+      <p></p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">22nd Google Startup Weekend Seoul Hackathon</h3>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Seoul, Korea</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
-                        <p>Received 3rd place in final judgement..</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Google Startup Weekend</h3>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act4"><i class="fa fa-camera"></i></a></div>
+        <div id="act4" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/gsw2016-1.jpg" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Seoul, Korea</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
+      <p>Received 3rd place in final judgement.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Smartphone Education for the Aged</h3>
-                            <div class="time">2016</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Sujeong Senior Welfare Center</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
-                        <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
-                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                    </div><!--//details-->
-                </div><!--//item-->
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
+        <h3 class="job-title">Smartphone Education for the Aged</h3>
+        <div class="time">2016</div>
+      </div>
+      <!--//upper-row-->
+      <div class="company">Sujeong Senior Welfare Center</div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
+      <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
 
-            </section><!--//section-->
+</section>
+<!--//section-->
