--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -45,17 +45,32 @@
       <div class="item">
         <h3 class="job-title"><a href="#" target="_blank">Certifications</a></h3><br>
         <div class="upper-row">
-          <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 412 (Ranked within top 9.6%) - Tier 3</span>
+          <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 412 <br> (Ranked within top 9.6%) - Tier 3</span>
+            <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-camera"></i></a></div>
+            <div id="act5" class="modal fade" tabindex="-1" role="dialog">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <img src="{{ site.baseurl }}/assets/images/topcit1.png" class="img-responsive">
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="time">2017</div>
           </p>
         </div>
         <div class="upper-row">
-          <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368</span>
-            <div class="time">2016</div>
-          </p>
-        </div>
-        <div class="upper-row">
           <p>- <span class="project-tagline">Information equipment operation technician</span>
+            <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-camera"></i></a></div>
+            <div id="act6" class="modal fade" tabindex="-1" role="dialog">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <img src="{{ site.baseurl }}/assets/images/ieot.JPG" class="img-responsive">
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="time">2010</div>
           </p>
         </div>
