--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/creative.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.popup.js"></script>
     <script>
+    </script>
+    <script>
+
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -17,5 +20,5 @@
       ga('create', 'UA-99001722-1', 'auto');
       ga('send', 'pageview');
 
-      $('a.popup').popup();
+
     </script>
