--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,38 +5,42 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Software Engineer</h3>
-        <div class="links"><a href="http://www.impressivo.net" class="view-on-github"><i class="fa fa-link"></i></a></div>
         <div class="time">2017.6 - Present</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Impressivo, Inc. - Seoul, Korea</div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Development android application with fabric touch device.</p>
-    </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
-
-  <div class="item">
-    <div class="meta">
       <div class="upper-row">
-        <h3 class="job-title">Junior Software Engineer</h3>
-        <div class="links"><a href="http://peoplespace.us" class="view-on-github"><i class="fa fa-link"></i></a></div>
-        <div class="time">2017.1 - 2017.2</div>
+        <div class="company">Impressivo, Inc. - Seoul, Korea</div>
+        <div class="links"><a href="http://www.impressivo.net" class="view-on-github"><i class="fa fa-link"></i></a></div>
       </div>
-      <!--//upper-row-->
-      <div class="company">PeopleSpace - Irvine, CA</div>
+      </>
+      <!--//meta-->
+      <div class="details">
+        <p>Development android application with fabric touch device.</p>
+      </div>
+      <!--//details-->
     </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Created OpenVPN with using Amazon Web Service(AWS) for client information security in SymphonyRM which is Customer Relationship Management(CRM) company in PeopleSpace.</p>
-      <!-- <p>Attended in the International Consumer Electronics Show(CES) 2017 which held in Las Vegas, NV.</p> -->
+    <!--//item-->
+
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Junior Software Engineer</h3>
+          <div class="time">2017.1 - 2017.2</div>
+        </div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">PeopleSpace - Irvine, CA</div>
+          <div class="links"><a href="http://peoplespace.us" class="view-on-github"><i class="fa fa-link"></i></a></div>
+        </div>
+      </div>
+      <!--//meta-->
+      <div class="details">
+        <p>Created OpenVPN with using Amazon Web Service(AWS) for client information security in SymphonyRM which is Customer Relationship Management(CRM) company in PeopleSpace.</p>
+        <!-- <p>Attended in the International Consumer Electronics Show(CES) 2017 which held in Las Vegas, NV.</p> -->
+      </div>
+      <!--//details-->
     </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
 </section>
 <!--//section-->
