--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,17 +5,19 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">PEOPLE INSIDE</h3>
-        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
         <div class="time">2016 - 2017</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Real-time indoor people count</div>
+      <div class="upper-row">
+        <div class="company">Real-time indoor people count</div>
+        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
       <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
       <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
-        <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
     </div>
@@ -27,11 +29,13 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">WHEN</h3>
-        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Group Schedule Manager (Android Application)</div>
+      <div class="upper-row">
+        <div class="company">Group Schedule Manager (Android Application)</div>
+        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -49,11 +53,13 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Solar System Explorer</h3>
-        <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Solar System Simulation</div>
+      <div class="upper-row">
+        <div class="company">Solar System Simulation</div>
+        <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -71,11 +77,13 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Segway Robot</h3>
-        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Self-balancing robot</div>
+      <div class="upper-row">
+        <div class="company">Self-balancing robot</div>
+        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
