--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -5,7 +5,6 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Art Hackathon</h3>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act1"><i class="fa fa-camera"></i></a></div>
         <div id="act1" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -19,7 +18,10 @@
         <div class="time">2017</div>
       </div>
       <!--//upper-row-->
-      <div class="company">GyeongGi, Korea</div>
+      <div class="upper-row">
+        <div class="company">GyeongGi, Korea</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act1"><i class="fa fa-camera"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -36,7 +38,6 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Google Startup Weekend</h3>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act2"><i class="fa fa-camera"></i></a></div>
         <div id="act2" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -49,7 +50,10 @@
         <div class="time">2017</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Seoul, Korea</div>
+      <div class="upper-row">
+        <div class="company">Seoul, Korea</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act2"><i class="fa fa-camera"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -71,7 +75,9 @@
         <div class="time">2017</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Gachon University</div>
+      <div class="upper-row">
+        <div class="company">Gachon University</div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -99,7 +105,6 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">KIISE Winter Conference</h3>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act3"><i class="fa fa-camera"></i></a></div>
         <div id="act3" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -112,7 +117,10 @@
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Gangwon, Korea</div>
+      <div class="upper-row">
+        <div class="company">Gangwon, Korea</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act3"><i class="fa fa-camera"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -130,7 +138,6 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Google Startup Weekend</h3>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act4"><i class="fa fa-camera"></i></a></div>
         <div id="act4" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -143,7 +150,10 @@
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Seoul, Korea</div>
+      <div class="upper-row">
+        <div class="company">Seoul, Korea</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act4"><i class="fa fa-camera"></i></a></div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
@@ -164,7 +174,9 @@
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
-      <div class="company">Sujeong Senior Welfare Center</div>
+      <div class="upper-row">
+        <div class="company">Sujeong Senior Welfare Center</div>
+      </div>
     </div>
     <!--//meta-->
     <div class="details">
