--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,32 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
+        <h3 class="job-title">Photo Blog</h3>
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="upper-row">
+        <div class="company">Personal photo blog</div>
+        <div class="links">
+          <ul>
+            <li><a href="https://ysm0622.github.io/photo" class="view-on-github"><i class="fa fa-link"></i></a></li>
+            <li><a href="https://github.com/ysm0622/photo" class="view-on-github"><i class="fa fa-github"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed my personal photographic blog static website.</p>
+      <p>Used GitHub pages, Jekyll, Bootstrap.</p>
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
+
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
         <h3 class="job-title">PEOPLE INSIDE</h3>
         <div class="time">2016 - 2017</div>
       </div>
@@ -58,7 +84,12 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Solar System Simulation</div>
-        <div class="links"><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="links">
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github"><i class="fa fa-video-camera"></i></a></li>
+            <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <!--//meta-->
