--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -59,7 +59,7 @@
       </div>
       <!--//upper-row-->
       <div class="upper-row">
-        <div class="company">Group Schedule Manager (Android Application)</div>
+        <div class="company">Group Schedule Manager (Android App)</div>
         <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
