--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -3,25 +3,25 @@
   <!-- <div class="intro">
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
-  <div class="add-info">
+  <div class="country">
     <div class="item">
       <div class="upper-row">
         <h3 class="job-title">Visited 11 Countries</h3><br>
         <div class="links"><a href="https://ysm0622.github.io/photo/" class="view-on-github"><i class="fa fa-camera"></i></a></div>
       </div>
       <div class="upper-row">
-        <p>- <img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
+        <p><img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
           <div class="time">2017</div>
         </p>
       </div>
       <div class="upper-row">
-        <p>- <span class="project-tagline">
+        <p><span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span>
           <div class="time">2016</div>
         </p>
       </div>
       <div class="upper-row">
-        <p>- <span class="project-tagline">
+        <p><span class="project-tagline">
                        <img src="{{site.baseurl}}/assets/images/eu.png"/> EU (Overseas training & Travel)</span>
           <div class="time">2016</div>
           &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png" /> England /
@@ -32,53 +32,54 @@
           <img src="{{site.baseurl}}/assets/images/nl.png" /> Netherlands</p>
       </div>
       <div class="upper-row">
-        <p>- <span class="project-tagline">
+        <p><span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span>
           <div class="time">2014</div>
         </p>
         <div class="upper-row">
-          <p>- <span class="project-tagline">
+          <p><span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
           <!-- <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
         </div>
-        <!--//item-->
-        <br>
-        <div class="certi">
-          <div class="item">
-            <h3 class="job-title">Certifications</h3><br>
-            <div class="upper-row">
-              <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT)<br>Score 412 (Ranked within top 9.6%) - Tier 3</span>
-                <div id="act5" class="modal fade" tabindex="-1" role="dialog">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-body">
-                        <img src="{{ site.baseurl }}/assets/images/topcit1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-camera"></i></a></div>
-                <div class="time">2017</div>
-              </p>
-            </div>
-            <div class="upper-row">
-              <p>- <span class="project-tagline">Information equipment operation technician</span>
-                <div id="act6" class="modal fade" tabindex="-1" role="dialog">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-body">
-                        <img src="{{ site.baseurl }}/assets/images/ieot.JPG" class="img-responsive">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-camera"></i></a></div>
-                <div class="time">2010</div>
-              </p>
+      </div>
+    </div>
+  </div>
+  <!--//item-->
+  <br>
+  <div class="certi">
+    <div class="item">
+      <h3 class="job-title">Certifications</h3><br>
+      <div class="upper-row">
+        <span class="project-tagline">TOPCIT Score 412 <br>(Ranked within top 9.6%) - Tier 3</span>
+        <div id="act5" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/topcit1.png" class="img-responsive">
+              </div>
             </div>
           </div>
         </div>
+        <div class="time">2017</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-file-text"></i></a></div>
       </div>
-      <!--//item-->
+      <p>
+        <div class="upper-row">
+          <span class="project-tagline">Information equipment technician</span>
+          <div id="act6" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/ieot.JPG" class="img-responsive">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="time">2010</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-file-text"></i></a></div>
+        </div>
+    </div>
+  </div>
+  <!--//item-->
 </section>
 <!--//section-->
