--- a/assets/css/styles-6.css
+++ b/assets/css/styles-6.css
@@ -274,6 +274,10 @@ p {
   font-size: 17px;
 }
 
+.main-wrapper .links .fa-file-text {
+  font-size: 15px;
+}
+
 .main-wrapper .time {
   position: absolute;
   right: 0;
@@ -361,11 +365,17 @@ p {
   .main-wrapper .upper-row {
     margin-bottom: 0;
   }
-  .add-info .time {
+  .country .time {
     position: absolute;
     right: 0;
     top: 0;
     margin-top: 0;
+  }
+  .certi .time {
+    margin-top: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 }
 
