--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,7 +10,7 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Impressivo, Inc. - Seoul, Korea</div>
-        <div class="links"><a href="http://www.impressivo.net" class="view-on-github"><i class="fa fa-link"></i></a></div>
+        <div class="links"><a href="http://www.impressivo.net" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></div>
       </div>
       </>
       <!--//meta-->
@@ -30,7 +30,7 @@
         <!--//upper-row-->
         <div class="upper-row">
           <div class="company">PeopleSpace - Irvine, CA</div>
-          <div class="links"><a href="http://peoplespace.us" class="view-on-github"><i class="fa fa-link"></i></a></div>
+          <div class="links"><a href="http://peoplespace.us" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></div>
         </div>
       </div>
       <!--//meta-->
