--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,8 +12,8 @@
         <div class="company">Personal photo blog</div>
         <div class="links">
           <ul>
-            <li><a href="https://ysm0622.github.io/photo" class="view-on-github"><i class="fa fa-link"></i></a></li>
-            <li><a href="https://github.com/ysm0622/photo" class="view-on-github"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://ysm0622.github.io/photo" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></li>
+            <li><a href="https://github.com/ysm0622/photo" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
@@ -36,7 +36,7 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Real-time indoor people count</div>
-        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
@@ -60,7 +60,7 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Group Schedule Manager (Android App)</div>
-        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
@@ -86,8 +86,8 @@
         <div class="company">Solar System Simulation</div>
         <div class="links">
           <ul>
-            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github"><i class="fa fa-video-camera"></i></a></li>
-            <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github" target="_blank"><i class="fa fa-video-camera"></i></a></li>
+            <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
@@ -113,7 +113,7 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Self-balancing robot</div>
-        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
